<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="366dp"
        android:layout_height="20dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="9dp"
        android:text="@string/alasbanshop"
        android:textColor="#fff"

        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="667dp"
        android:text="@string/direct_top_up"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/todo"
        android:onClick="showDiamond"

        android:src="@drawable/mobile"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="99dp"
        android:layout_height="149dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/todo1"
        android:onClick="showDiamond1"
        android:src="@drawable/freefire"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/todo2"
        android:src="@drawable/pubgm"
        android:onClick="showDiamond2"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/todo3"
        android:src="@drawable/ragnarokm"
        android:onClick="showDiamond3"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/todo4"
        android:src="@drawable/aov"
        android:onClick="showDiamond4"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/todo5"
        android:src="@drawable/speeddrifters"
        android:onClick="showDiamond5"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/todo6"
        android:src="@drawable/muorigin"
        android:onClick="showDiamond6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/todo7"
        android:src="@drawable/hago"
        android:onClick="showDiamond7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo8"
        android:src="@drawable/legacyofdiscord"
        android:onClick="showDiamond8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="336dp"
        android:text="Mobile Legends"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginBottom="97dp"
        android:text="Garena AOV"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="95dp"
        android:text="Free Fire"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="45dp"
        android:text="PUBG MOBILE"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="45dp"
        android:text="Garena Speed Drifters"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="45dp"
        android:text="Ragnarok M"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="108dp"
        android:text="MU Origin"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="187dp"
        android:text="HAGO"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="5dp"
        android:text="Legacy of Discord"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView9" />

</android.support.constraint.ConstraintLayout>